fix contrast ratio for accessibility

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -49,7 +49,7 @@ $global-flexbox: true;
 $global-font-size: 100%;
 $global-width: rem-calc(1024);
 $global-lineheight: 1.65;
-$primary-color: hsla(0, 83%, 57%, 1);
+$primary-color: #e72323;
 $primary-color-dark: hsla(0, 83%, 67%, 1);
 $secondary-color:  hsla(0, 0%, 25%, 1);
 $secondary-color-light:  lighten($secondary-color, 10%);
